# django_my_website

./: .gitignore  README.md  pyproject.toml
pages/: urls.py  views.py
pages/static/about/: styles_1.css
pages/templates/pages/: about.html  check-palindrome.html  contact.html  find-geo-loc.html  home.html  old_home.html  software-testing.html  temperature-conversion.html
pages/templates/pages/base/: base.html  navbar.html
pages_project/: settings.py
staticfiles/about/: styles.css
