[project]
name = "pages-project"
version = "0.1.0"
description = "Sample pages project"
authors = [
    {name = "swami.padman@gmail.com"}
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django ="5.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
